--- a/app/components/navbar.hbs
+++ b/app/components/navbar.hbs
@@ -7,7 +7,7 @@
       <LinkTo @route="messages" class="button">Messages</LinkTo>
     </li>
     <li>
-      <LinkTo @route="collection" class="button">Collections</LinkTo>
+      <LinkTo @route="collections" class="button">Collections</LinkTo>
     </li>
     <li>
       <LinkTo @route="explore" class="button">Explore</LinkTo>
