--- a/app/templates/collection.hbs
+++ b/app/templates/collection.hbs
@@ -1,10 +1,9 @@
-<Navbar>
-</Navbar>
-
 <h1>Collection</h1>
 
-<LinkTo @route="coin" @model="1">Coin 1</LinkTo>
-<LinkTo @route="coin" @model="2">Coin 2</LinkTo>
-
-<h2>{{this.price}}</h2>
-
+<h1>{{@model.collectionId}}</h1>
+<h1>{{@model.userId}}</h1>
+<h1>{{@model.collectionName}}</h1>
+<h1>{{@model.denominationQuantity}}</h1>
+<h1>{{@model.denomination}}</h1>
+<h1>{{@model.permissions}}</h1>
+<h1>{{@model.timestamp}}</h1>
