--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,6 +1,10 @@
 <h1>login</h1>
 
-{{login-page}}
+<form {{action 'authenticate' on='submit'}}>
+  <label for="username">Username</label>
+  <input type="text" name="username" {{on "change" (fn this.update "username")}}>
+  <label for="password">Password</label>
+  <input type="password" name="Password" {{on "change" (fn this.update "password")}}>
+  <button type="submit">Login</button>
+</form>
 
-<h2>Login page</h2>
-<p>Use login / ok</p>
