--- a/app/templates/collections.hbs
+++ b/app/templates/collections.hbs
@@ -6,7 +6,7 @@
 {{!-- <LinkTo @route="coin" @model="1">Coin 1</LinkTo> --}}
 {{!-- <LinkTo @route="coin" @model="2">Coin 2</LinkTo> --}}
 
-{{#each @model as |collection|}}
+{{#each @model.collections as |collection|}}
   {{!-- <h1>{{collection.collectionId}}</h1> --}}
   <LinkTo @route="collection" @model={{collection.collectionId}}>Collection: {{collection.collectionName}}</LinkTo>
 {{/each}}
