--- a/app/components/navbar.hbs
+++ b/app/components/navbar.hbs
@@ -13,7 +13,10 @@
       <LinkTo @route="explore" class="button">Explore</LinkTo>
     </li>
     <li>
-      {{!-- <LinkTo @route="coin" class="button">Sale</LinkTo> --}}
+      <LinkTo @route="sale" class="button">Sale</LinkTo>
+    </li>
+    <li class="logout">
+      <button type="button" {{on "click" this.logout}}>Logout</button>
     </li>
   </ul>
 </div>
