--- a/app/styles/coin.scss
+++ b/app/styles/coin.scss
@@ -4,7 +4,7 @@
   // background-color: aqua;
 }
 
-#vehicle1 {
+#coin-checkbox {
   width: 40px;
   height: 40px;
 }
@@ -33,4 +33,19 @@
     font-size: 50px;
     font-weight: normal;
   }
+}
+
+
+#editCoin {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
