--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -22,7 +22,7 @@
     text-decoration: none;
   }
 
-  li a:hover:not(.active) {
+  li a:hover:not(.active), .logout button:hover {
     background-color: #111;
   }
 
@@ -33,5 +33,24 @@
   h2 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+  }
+
+  .logout{
+    float:right;
+
+    button{
+      display: block;
+      color: white;
+      background-color: #333;
+      text-align: center;
+      padding: 21px 16px;
+      text-decoration: none;
+
+      border-style: none;
+    }
+
+    button:active {
+      background-color: #5386e4;
+    }
   }
 }
