--- a/app/styles/collection.scss
+++ b/app/styles/collection.scss
@@ -44,7 +44,7 @@ progress::-webkit-progress-bar {
   border-radius: 7px;
 }
 progress::-webkit-progress-value {
-  background-color: blue;
+  background-color: rgb(1, 1, 11);
   border-radius: 7px;
 }
 // progress::-moz-progress-bar {
