--- a/app/styles/collection.scss
+++ b/app/styles/collection.scss
@@ -1,51 +1,80 @@
-// h1{
-//   padding: 10px 10px 20px;
+
+.collection-body{
+
+  .collection-info *{
+    display: inline;
+  }
+
+  .coin-list{
+    display:flow-root;
+  
+    ol{
+      padding-left: 0px;
+    }
+  
+    .coin-link{
+      text-decoration: none;
+    }
+    h2{
+      display: inline-block;
+      margin-right: 4px; 
+    }
+  
+    img {
+      // float: right;
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+}
+
+
+
+// .collection-info{
+//   display: grid;
+//   grid-template-columns: auto auto;
 // }
 
-.collection-info{
-  display: grid;
-  grid-template-columns: auto auto;
-}
+// .collection-info, .coin-list{
+//   padding-left: 10px;
+//   justify-content: left;
+// }
 
-.collection-info, .coin-list{
-  padding-left: 10px;
-  justify-content: left;
-}
+// .collection-info h2, .collection-info span{
+//   // display: inline-block;
+//   padding-right: 10px;
 
-.collection-info h2, .collection-info span{
-  // display: inline-block;
-  padding-right: 10px;
+//   font-weight: 100;
+//   font-size: large;
+// }
 
-  font-weight: 100;
-  font-size: large;
-}
-
-a:link {color: black;text-decoration:none;}
-a:visited {color:#0000ff;text-decoration:none;}
-a:hover {text-decoration:underline;}
+// a:link {color: black;text-decoration:none;}
+// a:visited {color:#0000ff;text-decoration:none;}
+// a:hover {text-decoration:underline;}
 
 
-.add-coin-button-wrapper, button{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-// progress[value]{
-//   border: none;
-//   color: aquamarine;
+// .add-coin-button-wrapper, button{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
 // }
 
 progress {
   border-radius: 7px; 
+  margin-right: 250px;
 }
 progress::-webkit-progress-bar {
-  background-color:dodgerblue;
+  background-color:#333;
   border-radius: 7px;
+  width: 400px;
 }
 progress::-webkit-progress-value {
-  background-color: rgb(1, 1, 11);
+  background-color: #5386e4;
   border-radius: 7px;
 }
-// progress::-moz-progress-bar {
-// }
+
+
+#add-coin-modal{
+  display: none;
+}
