--- a/app/styles/editCoin.scss
+++ b/app/styles/editCoin.scss
@@ -5,7 +5,8 @@
   padding: 20px;
   border: 1px solid #888;
   border-radius: 5px;
-  width: 80%;
+  width: 40%;
+  height: 50%;
 }
 
 /* The Close Button */
@@ -21,4 +22,17 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+
+  /* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
